--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@ input {
   background-color: #abc;
 }
 
+input:hover {
+  background-color: #fff;
+}
+
 input::placeholder {
   text-align: center;
   color: black;
@@ -101,7 +105,6 @@ nav {
   align-items: flex-start;
   max-width: 100%;
   margin: 0 auto;
-  padding: 20px;
 }
 
 .movie-poster {
@@ -168,6 +171,15 @@ nav {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
+  margin: 0 0 20px 0;
+}
+
+.button-credits {
+  background-color: #abc;
+}
+
+.button-credits:hover {
+  background-color: #fff;
 }
 
 .credits-carousel div {
@@ -180,4 +192,30 @@ nav {
 .credits-carousel div img {
   max-width: 100%;
   height: auto;
+}
+
+.reviews-h2 {
+  margin: 0;
+}
+
+.review-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin: 0 10px 0 0;
+  object-fit: cover;
+}
+
+.content-review {
+  display: flex;
+  flex-direction: column;
+}
+
+.reviews-container {
+  margin: 0;
+}
+
+div.reviews {
+  display: flex;
+  margin: 0 0 20px 0;
 }
