--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,10 @@ p {
   margin: 5px 0px 10px 0px;
 }
 
+.error-style {
+  color: #fff;
+}
+
 /* Header */
 
 header {
@@ -100,10 +104,19 @@ nav {
   margin-top: 10px;
   font-size: 18px;
   font-weight: bold;
-  color: #333;
+  color: #fff;
 }
 
 /* MovieDetail */
+
+.movie-item-similar {
+  border-radius: 5px;
+}
+
+.movie-item-similar img {
+  width: 100%;
+  border-radius: 5px;
+}
 
 .movie-detail-container {
   display: flex;
@@ -113,16 +126,16 @@ nav {
 }
 
 .movie-poster {
-  margin-right: 20px; /* Espace entre l'affiche et les détails */
+  margin-right: 20px;
 }
 
 .movie-poster img {
-  max-width: 100%; /* Pour que l'image s'adapte à la taille de son conteneur */
+  max-width: 100%;
 }
 
-/* Pour assurer que les détails occupent tout l'espace disponible */
+
 .movie-details {
-  flex-grow: 1;
+  flex-grow: 1; /* Pour assurer que les infos occupent tout l'espace disponible */
 }
 
 .movie-details p {
@@ -244,4 +257,50 @@ div.reviews {
 .random-content h1 {
   text-align: center;
   margin-bottom: 10px;
+}
+
+/* Hover affiche */
+.movie-item {
+  position: relative;
+  overflow: hidden;
+}
+
+.movie-item img {
+  width: 100%;
+  height: auto;
+  transition: filter 0.3s ease;
+}
+
+.movie-item:hover img {
+  filter: blur(3px);
+}
+
+.movie-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 20px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  backdrop-filter: blur(3px);
+}
+
+.movie-info h2,
+.movie-info p {
+  margin: 0;
+  white-space: normal;
+  word-wrap: break-word;
+  max-width: calc(100% - 40px);
+}
+
+.movie-item:hover .movie-info {
+  opacity: 1;
+}
+
+.movie-item p {
+  color: #fff;
 }
